k8s/api/api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app.kubernetes.io/name: api
    app: api
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: registry.gitlab.com/atosnet/crd/api:latest
          ports:
          - containerPort: 5000
      imagePullSecrets:
        - name: atosregistrykey
---
apiVersion: v1
kind: Service
metadata:
  name: api-ui
  namespace: api
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
  selector:
    app: api
  type: ClusterIP
